main dashboard : graph and text issue fixed
- fixed graph overlapping
- added level for utilization chart
- fixed the height for first row
- fixed NAN issue in most used pool list
- removed unwanted space

--- a/app/styles/dashboard.scss
+++ b/app/styles/dashboard.scss
@@ -10,7 +10,7 @@
     }
 
     .utilization {
-        margin-top: 2%;
+        margin-top: 111px;
     }
 
     .status-notification {
@@ -30,7 +30,7 @@
     }
 
     .custom-height {
-        min-height: 254px;
+        min-height: 316px;
     }
 
     .indicator-for-clusters {
@@ -67,4 +67,21 @@
         min-height: 110px;
     }
 
+    .dashboard-contain .progress-bar {
+        line-height : 37px;
+    }
+
+    .dashboard-contain .progress-description {
+        margin-bottom : -1px;
+    }
+
+    .cluster-info {
+        margin-top: 70px;
+    }
+
+    .cluster-size-label {
+        font-size: smaller;
+    }
+
 }
+
